--- a/midi2vjoy/nanokontrol2.conf
+++ b/midi2vjoy/nanokontrol2.conf
@@ -8,11 +8,11 @@
 # m_control is the ID of the midi message.
 # m_value is the value of the midi message (valid only for buttons, use * to match any).
 # The [m_type, m_control, m_value, ..] of each MIDI input can be found
-# when running the program in test mode. Just push/move the control
-# and watch the messages showing up on the screen.
+#   when running the program in test mode. Just push/move the control
+#   and watch the messages showing up on the screen.
 # v_id is the vJoystick ID where the MIDI message is translated to.
 # v_number is the axis or button number MIDI message is contolling.
-# v_output is only available for buttons. if it is not specified, output is 'down'.
+# v_output is only available for buttons. If it is not specified, output is 'down'.
 #   Special 'press_and_release' output preses buton and then releases it. useful for mapping slider end positions to 
 #   buttons, to avoid a situation where such slider cause constant button down in a sim. In MSFS this causes heading indicator
 #   to skip 10 values for some reason
